--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
-    <section c="page">
+    <section class="page">
       <p class="page-title">Badges</p>
       <div class="page-wrapper">
         <span class="badge badges-completed">Completed</span>
