--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
-    <section class="page">
+    <button class="small-btn" type="button">Click me</button>
+    <!-- <section class="page">
       <p class="page-title">Badges</p>
       <div class="page-wrapper">
         <span class="badge badges-completed">Completed</span>
         <span class="badge badges-ended">Ended</span>
         <span class="badge badges-activ">Activ</span>
       </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
       <div class="container">Made with ❤</div>
