--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
     <title>SASS Tutorial template</title>
   </head>
   <body>
-    <button class="small-btn" type="button">Click me</button>
-    <!-- <section class="page">
-      <p class="page-title">Badges</p>
-      <div class="page-wrapper">
-        <span class="badge badges-completed">Completed</span>
-        <span class="badge badges-ended">Ended</span>
-        <span class="badge badges-activ">Activ</span>
-      </div>
-    </section> -->
+    <!-- <button class="small-btn" type="button">Click me</button> -->
 
-    <footer class="footer">
-      <div class="container">Made with ❤</div>
-    </footer>
+    <section class="section">
+      <h1 class="title">Page title</h1>
+      <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis similique, vitae veniam quisquam nihil quod at accusamus amet nemo deserunt minus consectetur odit molestias non minima. Quod ducimus dicta eos!</p>
+    </section>
+    <section>
+      <h2>fghj jkjjhgfd</h2>
+    </section>
 
     <script type="module" src="./src/js/main.js"></script>
   </body>
