--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <button class="small-btn" type="button">Click me</button> -->
 
+    // lesson 6//
     <section class="section">
       <h1 class="title">Page title</h1>
       <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis similique, vitae veniam quisquam nihil quod at accusamus amet nemo deserunt minus consectetur odit molestias non minima. Quod ducimus dicta eos!</p>
@@ -16,6 +17,13 @@
     <section>
       <h2>fghj jkjjhgfd</h2>
     </section>
+
+    <button class="button" type="button">
+      <svg class="button-icon"></svg>
+      <span class="button-label">Order</span>
+    </button>
+
+    // end lesson 6//
 
     <script type="module" src="./src/js/main.js"></script>
   </body>
