--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- <button class="small-btn" type="button">Click me</button> -->
 
-    // lesson 6//
+    <!-- // lesson 6//
     <section class="section">
       <h1 class="title">Page title</h1>
       <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis similique, vitae veniam quisquam nihil quod at accusamus amet nemo deserunt minus consectetur odit molestias non minima. Quod ducimus dicta eos!</p>
@@ -23,7 +23,32 @@
       <span class="button-label">Order</span>
     </button>
 
-    // end lesson 6//
+    // end lesson 6// -->
+
+    // Start lesson 07 //
+    <div class="task">
+      <div class="task-info"></div>
+      <div class="task-badges">
+        <p class="badges-info">Remander</p>
+        <div class="badge badge-completed">Badge comleted</div>
+      </div>
+    </div>
+    <div class="task">
+      <div class="task-info"></div>
+      <div class="task-badges">
+        <p class="badges-info">Remander</p>
+        <div class="badge badge-ented">Ented</div>
+      </div>
+    </div>
+    <div class="task">
+      <div class="task-info"></div>
+      <div class="task-badges">
+        <p class="badges-info">Remander</p>
+        <div class="badge badge-activ">Activ</div>
+      </div>
+    </div>
+
+    // end lesson 07 //
 
     <script type="module" src="./src/js/main.js"></script>
   </body>
