--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="task-info"></div>
       <div class="task-badges">
         <p class="badges-info">Remander</p>
-        <div class="badge badge-completed">Badge comleted</div>
+        <div class="badge badge-completed">Comleted</div>
       </div>
     </div>
     <div class="task">
