--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     // end lesson 6// -->
 
-    // Start lesson 07 //
+    <!-- // Start lesson 07 //
     <div class="task">
       <div class="task-info"></div>
       <div class="task-badges">
@@ -48,7 +48,25 @@
       </div>
     </div>
 
-    // end lesson 07 //
+    // end lesson 07 // -->
+
+    <div class="notification notification-primary">
+      <svg class="notification-icon" width="20" height="20">
+        <use href="src/img/icons/ukraine.svg"></use>
+      </svg>
+      <p class="notification-text">Primary</p>
+
+      <button class="notification-btn" aria-label="Close button"></button>
+    </div>
+
+    <div class="notification notification-success">
+      <svg class="notification-icon" width="20" height="20">
+        <use href="src/img/icons/ukraine.svg"></use>
+      </svg>
+      <p class="notification-text">Success</p>
+
+      <button class="notification-btn" aria-label="Close button"></button>
+    </div>
 
     <script type="module" src="./src/js/main.js"></script>
   </body>
