--- a/index.html
+++ b/index.html
@@ -49,23 +49,24 @@
     </div>
 
     // end lesson 07 // -->
+    <div class="main-wrap">
+      <div class="notification notification-primary">
+        <svg class="notification-icon" width="20" height="20">
+          <use href="src/img/icons/ukraine.svg"></use>
+        </svg>
+        <p class="notification-text">Primary</p>
 
-    <div class="notification notification-primary">
-      <svg class="notification-icon" width="20" height="20">
-        <use href="src/img/icons/ukraine.svg"></use>
-      </svg>
-      <p class="notification-text">Primary</p>
+        <button class="notification-btn" aria-label="Close button"></button>
+      </div>
 
-      <button class="notification-btn" aria-label="Close button"></button>
-    </div>
+      <div class="notification notification-success">
+        <svg class="notification-icon" width="20" height="20">
+          <use href="src/img/icons/ukraine.svg"></use>
+        </svg>
+        <p class="notification-text">Success</p>
 
-    <div class="notification notification-success">
-      <svg class="notification-icon" width="20" height="20">
-        <use href="src/img/icons/ukraine.svg"></use>
-      </svg>
-      <p class="notification-text">Success</p>
-
-      <button class="notification-btn" aria-label="Close button"></button>
+        <button class="notification-btn" aria-label="Close button"></button>
+      </div>
     </div>
 
     <script type="module" src="./src/js/main.js"></script>
