--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     // end lesson 07 // -->
     <div class="main-wrap">
-      <div class="notification notification-primary">
+      <div class="notification-primary">
         <svg class="notification-icon" width="20" height="20">
           <use href="src/img/icons/ukraine.svg"></use>
         </svg>
@@ -59,7 +59,7 @@
         <button class="notification-btn" aria-label="Close button"></button>
       </div>
 
-      <div class="notification notification-success">
+      <div class="notification-success">
         <svg class="notification-icon" width="20" height="20">
           <use href="src/img/icons/ukraine.svg"></use>
         </svg>
