--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     // end lesson 07 // -->
-    <div class="main-wrap">
+    <!-- <div class="main-wrap">
       <div class="notification-primary">
         <svg class="notification-icon" width="20" height="20">
           <use href="src/img/icons/ukraine.svg"></use>
@@ -67,7 +67,12 @@
 
         <button class="notification-btn" aria-label="Close button"></button>
       </div>
-    </div>
+    </div> -->
+    //lesson 10
+
+    <button class="btn-sm" type="button">Small</button>
+    <button class="btn-md" type="button">Regular</button>
+    <button class="btn-lg" type="button">Large</button>
 
     <script type="module" src="./src/js/main.js"></script>
   </body>
